fixed loading glitch where sections jumped

--- a/css/about.css
+++ b/css/about.css
@@ -183,6 +183,7 @@ h3 {
   padding-bottom: 100px;
   float: left;
   width: 100%;
+  position: relative;
 }
   .primary {
     background-color: #c5ecba;
